2010-12-05 
----------

* Incluidas notificaciones y mensajes. 
* Incluido will_paginate
* Incluido delayed_job para las consultas distribuidas

2010-11-27 
----------

* Eliminamos acts_as_taggable_on_steroids por acts-as-taggable-on 
* Incluimos una shell de instalación install.sh 
* Incluimos un fichero con instrucciones de instalación INSTALL 
