@@ -50,12 +50,22 @@
 	        <ul id="sidebar-items">
 			  <li>
 		            <ul class="links">
-		              <li>
+		              
 							<% if !current_user.nil? %>
-								<%= link_to current_user.login,  edit_user_path(current_user.id) %> 
+								<li>
+								<%= link_to current_user.login,  edit_user_path(current_user.id) %>
+								<%= link_to (image_tag('logout.png'),  "/logout") %>
+								</li>
+								<li>
+								<%= link_to (image_tag('notificacion.png'),  "/notificaciones") %>
+								(<%= Mensaje.notificacionessinleer(current_user.id).count -%>/<%=  Mensaje.notificacionestotal(current_user.id).count -%>) 
+								
+								<%= link_to (image_tag('email.png'),  "/mensajes") %>
+								(<%= Mensaje.mensajessinleer(current_user.id).count -%>/<%=  Mensaje.mensajestotal(current_user.id).count -%>) 
 
-								<%= link_to 'Salir',  "/logout" %></li>
+								</li>
 							<% end %>
+						
 		            </ul>
 		          </li>	
 	          <li>
