@@ -1,6 +1,5 @@
-<h1>Editing mensaje</h1>
+<h1>Enviar Mensaje</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @mensaje %> |
-<%= link_to 'Back', mensajes_path %>
+<%= link_to 'Volver a la lista de mensajes', mensajes_path %>
