@@ -1,3 +1,9 @@
+2010-12-06 
+----------
+
+* Display de notificaciones y mensajes pendientes y total
+* Implementanda respuesta a notificaciones y mensajes en local
+
 2010-12-05 
 ----------
 
